Updated Skills section and implement Animation on Scroll to Sections.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <div class="year">
                 <div>
                   <h6 class="heading-uppercase">2019</h4>
-                  <span>Certificate of Completion</span>
+                  <span>Certificate in Full Stack Web Development</span>
                 </div>
               </div>
               <h6 class="heading-uppercase">University of Central Florida Coding Bootcamp</h4>
@@ -219,14 +219,14 @@
             </div>
             <!-- end Education box 2 -->
           </div>
-          <!-- Skills -->
-          <div class="col-12 col-lg-6 skills-background" style="background-image: url(assets/images/greyBackground.jpg); min-height:474px;">
-            <div class="bg-overlay-black">
-              <div class="middle-content">
-              </div>
+          <!-- Hire me -->
+          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(assets/images/blackBackground.png); min-height:474px;">
+            <div class="middle-content">
+              <h4 class="margin-bottom-30" style="color: white;">Check out my Credentials</h4>
+              <a class="btn-style" style="color:black; background: white;" href="https://credly.com/credit/cd017e4f2?custom_assertion=0">Click Here</a><!-- button -->
             </div>
           </div>
-          <!-- end Skills -->
+          <!-- end Hire me -->
         </div><!-- end row -->
       </div><!-- end container -->
     </section>
