Updated repo links.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <div class="image-title">
                   <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
                     <div>
-                        <a href="https://rubentba.github.io/trainScheduler/">Github Repo</a><!-- link to popup content -->
+                        <a href="https://github.com/Rubentba/trainScheduler">Github Repo</a><!-- link to popup content -->
                     </div>
                   </div>
                 </div>
@@ -133,7 +133,7 @@
                   <div class="image-title">
                   <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
                     <div>
-                        <a href="https://rubentba.github.io/TriviaGame/">Github Repo</a><!-- link to popup content -->
+                        <a href="https://github.com/Rubentba/TriviaGame">Github Repo</a><!-- link to popup content -->
                     </div>
                   </div>
                 </div>
